# Ameli

./: .gitignore  LICENSE  README.md  main.py
base/: CMakeLists.txt
base/include/: tensor.hpp
base/src/: main.cpp
scripts/learning/linalg/: linalg.ipynb
